# subxt-1871-repro

./: Cargo.toml
src/: main.rs
