[package]
name = "subxt-1871-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = { version = "0.38" }
subxt-signer = { version = "0.38", default-features = false, features = [
    "sr25519",
    "subxt",
] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
# Uncomment this:
# schnorrkel = { version = "0.11.4", default-features = false, features = [
#     "getrandom",
# ] }
# or this:
# getrandom_or_panic = { version = "0.0.3", default-features = false, features = [
#     "getrandom",
# ] }
